--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,20 +9,25 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="mobileapp.jbr.mydota.AppController"
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="myDota.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
 
-        <meta-data android:name="AA_DB_NAME" android:value="myDota.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="1" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:hardwareAccelerated="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,19 +38,19 @@
             android:name=".AccountActivity"
             android:label="MyDota"
             android:parentActivityName=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:parentActivityName=".LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="mobileapp.jbr.mydota.LoginActivity" />
         </activity>
+        <activity android:name=".MatchActivity"></activity>
     </application>
 
 </manifest>
